samples/_failures_safe/1761358777_cf82a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feba72d4.c: In function ‘main’:
./samples/SAFE/__tmp_feba72d4.c:150: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_feba72d4.c:149:25: error: expected declaration or statement at end of input
  149 |                         if
      |                         ^~
./samples/SAFE/__tmp_feba72d4.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_feba72d4.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_feba72d4.c:149:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_feba72d4.c:149:25: error: expected declaration or statement at end of input
